feat: create footer

--- a/index.html
+++ b/index.html
@@ -45,13 +45,15 @@
                 <div class="education">
                     <div class="section-headers">
                         <h2>Education</h2>
-                        <img src="img/icons/education.png" alt="Education" height="">
+                        <img src="img/icons/education.png" alt="Education" >
                     </div>
                     <div class="institution-names">
-                        <ul>
-                            <li>Brest state techinical university</li>
+                        <div class="university-name">
+                            <ul>
+                                <li>Brest state techinical university</li>
+                            </ul>
                             <p>Specialist. Faculty of Civil Engineering. Building Construction Technologies</p>
-                        </ul>
+                        </div>
                         <div class="studys-years">
                             <h6>2013-2018</h6>
                         </div>
@@ -64,10 +66,12 @@
                         <img src="img/icons/workexperience.png" alt="work">
                     </div>
                     <div class="jobs-info">
-                        <ul>
-                            <li>Modern concrete constructions </li>
+                        <div>
+                            <ul>
+                                <li>Modern concrete constructions </li>
+                            </ul>
                             <p>Quality engineer</p>
-                        </ul>
+                        </div>
                         <div class="years-work">
                             <h6>07/2020-08/2020</h6>
                         </div>
@@ -147,16 +151,18 @@
                         <img src="img/icons/travelling.png" title="Travelling" alt="Travelling">
                         <img src="img/icons/study.png" title="Study" alt="Study">
                         <img src="img/icons/sport.png" title="Sport" alt="Sport">
-                    </div>
-                    
+                    </div>    
                 </div>
             </aside>  
         </main>
          
         <footer>
-            <nav>
-
-            </nav>
+            <div class="rss-logo">
+                <a href="https://rs.school/js/"><img src="img/icons/rss.svg" alt="rss-logo"></a>
+            </div>
+            <div class="birthday">
+                This CV <br> was created in <br> 09/2021
+            </div>
         </footer>  
     </div>   
 </body>
