feat:add info in div skills

--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
                         <li>CSS</li>
                         <li>Javascript</li>
                         <li>Git</li>
+                        <li>Figma</li>
                     </ul>
                 </div>
 
